style.scss
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@font-face {
  font-family: "main-font";
  font-weight: 100;
  src: url(./Noto_Sans/NotoSans-ExtraBoldItalic.ttf);
}

@font-face {
  font-family: "name-font";
  src: url("./Great_Vibes/GreatVibes-Regular.ttf");
}

body {
  font-family: "main-font", sans-serif;
  background-color: #eee;
  overflow-x: hidden;
  scroll-behavior: smooth;
  overflow-x: hidden;

  &::-webkit-scrollbar {
    width: 0.5rem;
  }

  &::-webkit-scrollbar-thumb {
    background-color: #0aaae9;
  }

  &::-webkit-scrollbar-track {
    background-color: #fff;
  }

  &::-webkit-scrollbar-track:hover {
    background-color: #eee;
  }

  &::-webkit-scrollbar-thumb:hover {
    background-color: #0aaae9;
  }

  &::-webkit-scrollbar-thumb:active {
    background-color: #0aaae9;
  }
}

body > *:not(nav, .homePage, footer) {
  text-align: center;
  > h1 {
    font-size: 3.5rem;
    margin-bottom: 5rem;
    position: relative;
    transform: translateX(-50px);
    opacity: 0;
    transition: all 0.5s ease-in-out;
    text-align: center;
    display: inline-block;
    text-transform: uppercase;

    &.appear {
      opacity: 1;
      transform: translate(0);
    }

    &::after {
      content: "";
      position: absolute;
      width: 50%;
      height: 0.3rem;
      left: 25%;
      background-color: #000;
      bottom: -0.5rem;
    }

    @media (max-width: 800px) {
      font-size: clamp(1.5rem, 5vw, 2.5rem);
      margin-bottom: clamp(1rem, 6vw, 3rem);
    }
  }
}

nav {
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem clamp(1.5rem, 3vw, 4rem);
  width: 100vw;
  background-color: #eee;
  z-index: 1000;
  transition: all 0.3s ease;

  &.active {
    background-color: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  }

  .logo {
    font-family: "name-font", cursive;
    font-size: clamp(1rem, 2.5vw, 2rem);
    color: #333;
  }

  .navbar {
    .name-navbar {
      display: none;
    }
    ul {
      display: flex;
      justify-content: center;
      align-items: center;
      list-style: none;
      gap: 2rem;

      li {
        cursor: pointer;
        text-transform: uppercase;
      }

      li a {
        font-size: clamp(1rem, 1.5vw, 1.5rem);
        font-weight: 600;
        color: #555;
        cursor: pointer;
        text-decoration: none;
        position: relative;
        transition: all 0.2s ease;

        &:before {
          content: "";
          position: absolute;
          bottom: -5px;
          left: 0;
          width: 0%;
          height: 3px;
          background-color: #0aaae9;
          transition: 0.3s;
        }

        &.active {
          color: #0aaae9;

          &:before {
            width: 100%;
          }
        }

        &:hover {
          color: #0aaae9;
        }
      }
    }
  }

  .hamburger {
    display: none;
    cursor: pointer;
    font-size: 1.5rem;
    position: absolute;
    top: 10px;
    right: 20px;
    color: #333;
    z-index: 1000;
    transition: all 0.3s ease;

    .line {
      width: 30px;
      height: 3px;
      background-color: #333;
      margin: 5px 0;
      transition: all 0.3s ease;
    }

    &.active {
      color: #0aaae9;
    }

    @media (max-width: 800px) {
      display: block;
    }
  }

  @media (max-width: 800px) {
    .navbar {
      position: fixed;
      top: 0;
      left: calc(-1 * clamp(200px, 60vw, 400px));
      width: clamp(200px, 60vw, 400px);
      height: 100vh;
      transition: all 0.4s ease-in-out;
      background-color: #eee;
      padding: 0 1rem;
      padding-top: 5rem;

      &::before {
        content: "";
        position: absolute;
        top: 0;
        right: -200%;
        width: 200%;
        height: 100%;
        background-color: #000;
        opacity: 0.4;
        z-index: -1;
        display: none;
      }

      .name-navbar {
        display: block;
        font-family: "name-font", cursive;
        font-size: clamp(2rem, 9vw, 4.5rem);
        font-weight: 1000;
        color: #555;
        margin-bottom: 1rem;
      }

      &.appear {
        left: 0;

        &::before {
          display: block;
        }
      }
    }

    .navbar ul {
      flex-direction: column;
      justify-content: space-around;
      align-items: flex-start;
      width: 100%;
      transition: all 0.3s ease;
      margin-top: 2rem;

      li {
        margin: clamp(0.5rem, 2vw, 1rem) 0;

        a {
          font-size: clamp(0.8rem, 3vw, 1.5rem);
        }
      }
    }
  }
}
/* ... */

